# corewin

./: .gitignore  Cargo.toml  README.md  abw.ps1  build.ps1  test.ps1
.github/workflows/: main.yml
scripts/: build.ps1  generate-wxs.ps1
src/: abw.ps1  cli.rs  corewin.ps1  main.rs
wix/: bins.wxs  main.wxs
