[package]
name = "corewin"
version = "0.1.1"
edition = "2024"
authors = ["Marco Ferragina <marco.ferragina@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ferama/abw"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }

[package.metadata.wix]

[profile.release]
codegen-units = 1
lto = true
strip = true
